--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   header{text-align:center;background-color: blue;color:white}
   h1{font-size:48px;margin:0;padding:50px 0 20px 0;border:0;font-weight:300;}
   h2{font-size:26px;margin:0;padding:10px 0 30px 0;border:0;font-weight:300;}
-  a{text-decoration:none}
+  svg{vertical-align: bottom;color:grey;padding-left:10px}
+  a{text-decoration:none;color:#00008B}
   a:hover{text-decoration:underline}
   .row {display: flex;background-color: white}
   .col-1 {flex: .4;text-align:right;padding: 0 2.5% 0 .5%;background-color:#F0F0F0;color:black}
@@ -23,9 +24,15 @@
   .section-title{font-size: 22px;font-weight: 600;}
   .position-title, .project-title{font-size: 22px;font-weight: 600;color:grey}
   .skill-group{font-size: 20px;font-weight:600;color:grey}
-    @media print {body {margin:0}}
-    </style>
 
+    </style>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PC8CGHG');</script>
+    <!-- End Google Tag Manager -->
   </head>
 
   <body>
@@ -39,10 +46,23 @@
         <div class="section">
           <div class="section-title">CONTACT</div>
           <div class="details">
-            <a href="mailto:larsestrem@gmail.com">larsestrem@gmail.com</a> <br />
-            530-570-5277 <br />
-            Canby, OR <br />
-            <a href="https://www.linkedin.com/in/larsestrem/">LinkedIn</a> <br />
+            <a href="mailto:larsestrem@gmail.com">larsestrem@gmail.com</a>
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+    <path fill="currentColor" d="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z" />
+</svg><br />
+            530-570-5277
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+    <path fill="currentColor" d="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z" />
+</svg><br />
+            Canby, OR
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+              <path fill="currentColor" d="M12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5M12,2A7,7 0 0,0 5,9C5,14.25 12,22 12,22C12,22 19,14.25 19,9A7,7 0 0,0 12,2Z" />
+<           /svg><br />
+            <a href="https://www.linkedin.com/in/larsestrem/">LinkedIn</a>
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+    <path fill="currentColor" d="M19 3A2 2 0 0 1 21 5V19A2 2 0 0 1 19 21H5A2 2 0 0 1 3 19V5A2 2 0 0 1 5 3H19M18.5 18.5V13.2A3.26 3.26 0 0 0 15.24 9.94C14.39 9.94 13.4 10.46 12.92 11.24V10.13H10.13V18.5H12.92V13.57C12.92 12.8 13.54 12.17 14.31 12.17A1.4 1.4 0 0 1 15.71 13.57V18.5H18.5M6.88 8.56A1.68 1.68 0 0 0 8.56 6.88C8.56 5.95 7.81 5.19 6.88 5.19A1.69 1.69 0 0 0 5.19 6.88C5.19 7.81 5.95 8.56 6.88 8.56M8.27 18.5V10.13H5.5V18.5H8.27Z" />
+</svg>
+            <br />
           </div>
         </div>
 
@@ -105,7 +125,7 @@
           <ul>
             <li>Created a directory listing all fire departments/fire stations in the US.</li>
             <li>Enable & encourage fire dept admins to manage their fire dept, make edits, add fire apparatus/firefighters/photos & volunteer recruitment info.</li>
-            <li>Monitoring visitor traffic to learn what works best & find opportunities for improvement.</li>
+            <li>Monitor visitor traffic to learn what works best & find opportunities for improvement.</li>
             <li>Periodically, design new features or performance to improve the user experience or increase organic traffic.</li>
             <li>Recruit/retain programmers, content creators, & an administrator to manage the day-to-day operations of the website. Meg, my first employee (hired in 2013), still works for me as an independent contractor.</li>
             <li>Manage paid search engines & social media ad campaigns. This site's AdWords campaign has a lifetime cost of over $19,500 with a 5 cent average CPC.</li>
@@ -158,7 +178,7 @@
           Project Manager<br />
           March 2015 - Current
           <ul>
-            <li>NvFirechf.org - Created an online volunteer firefighter Recruitment application for the Nevada Fire Chiefs Association (NFCA).</li>
+            <li>NvFirechf.org - Created an online volunteer firefighter recruitment application for the Nevada Fire Chiefs Association (NFCA).</li>
             <li>NvFirechf.org - Added a firefighting jobs page. These jobs brought in a large number of aspiring firefighters. By offering the opportunity for training and experience as a volunteer, we increased volunteer applications.</li>
             <li>FireDepartment.net - Added free online volunteer firefighter application for fire dept managers. Each application submitted includes a reminder to update and improve their content/photos in order to get more traffic/applicants. Undelivered applications emails provide a signal enabling us to follow up with the fire dept on out-of-date volunteer recruiter info.</li>
           </ul>
@@ -177,4 +197,8 @@
       </div>
     </div>
   </body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PC8CGHG"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   </html>
