--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
             <a href="https://developers.google.com/speed/pagespeed/insights/">Pagespeed Insights</a> <br />
             <a href="https://search.google.com/search-console/about">Google Search Console</a> <br />
             <a href="https://www.bing.com/webmasters/about">Bing Webmaster Tools</a> <br />
-            <a href="https://www.microsoft.com/en-us/microsoft-365/excel">Microsoft Excel</a> <br />
+            <a href="https://www.conductor.com/">Conductor Searchlight</a> <br />
+            <a href="https://www.screamingfrog.co.uk/seo-spider/">Screaming Frog</a> <br />
+            <a href="https://www.microsoft.com/en-us/microsoft-365/excel">Microsoft Excel</a>
           </div>
         </div>
 
@@ -178,9 +180,9 @@
           Project Manager<br />
           March 2015 - Current
           <ul>
-            <li>NvFirechf.org - Created an online volunteer firefighter recruitment application for the Nevada Fire Chiefs Association (NFCA).</li>
-            <li>NvFirechf.org - Added a firefighting jobs page. These jobs brought in a large number of aspiring firefighters. By offering the opportunity for training and experience as a volunteer, we increased volunteer applications.</li>
-            <li>FireDepartment.net - Added free online volunteer firefighter application for fire dept managers. Each application submitted includes a reminder to update and improve their content/photos in order to get more traffic/applicants. Undelivered applications emails provide a signal enabling us to follow up with the fire dept on out-of-date volunteer recruiter info.</li>
+            <li><a href="https://www.nvfirechf.org/volunteer/volunteer-firefighter-application">NvFirechf.org</a> - Created an online volunteer firefighter recruitment application for the Nevada Fire Chiefs Association (NFCA).</li>
+            <li><a href="https://www.nvfirechf.org/jobs/">NvFirechf.org</a> - Added a firefighting jobs page. These jobs brought in a large number of aspiring firefighters. By offering the opportunity for training and experience as a volunteer, we increased volunteer applications.</li>
+            <li><a href="https://volunteer.firedepartment.net/volunteer-firefighter-application/?departmentname=Axtell%20Fire%20and%20Rescue&fdurl=/directory/nebraska/kearney-county/axtell/axtell-fire-and-rescue&volunteerRecruiterEmail=jeff.england@fmb-axtell.com&volunteerRecruiterName=Jeff%20England&fdid=400">FireDepartment.net</a> - Added free online volunteer firefighter application for fire dept managers. Each application submitted includes a reminder to update and improve their content/photos in order to get more traffic/applicants. Undelivered applications emails provide a signal enabling us to follow up with the fire dept on out-of-date volunteer recruiter info.</li>
           </ul>
 
         </div>
