remvoed tag manager

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="language" content="english">
 
   <style>
-  body{max-width:1200px;margin:auto;height:100%;background:#1e1e1c;font-size:18px;line-height:24px;min-width:374px}
+  body{max-width:1200px;min-width:1000px;margin:auto;height:100%;background:#1e1e1c;font-size:18px;line-height:24px}
   header{text-align:center;background-color: blue;color:white}
   h1{font-size:48px;margin:0;padding:50px 0 20px 0;border:0;font-weight:300;}
   h2{font-size:26px;margin:0;padding:10px 0 30px 0;border:0;font-weight:300;}
@@ -26,13 +26,7 @@
   .skill-group{font-size: 20px;font-weight:600;color:grey}
 
     </style>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PC8CGHG');</script>
-    <!-- End Google Tag Manager -->
+
   </head>
 
   <body>
@@ -182,7 +176,7 @@
           <ul>
             <li><a href="https://www.nvfirechf.org/volunteer/volunteer-firefighter-application">NvFirechf.org</a> - Created an online volunteer firefighter recruitment application for the Nevada Fire Chiefs Association (NFCA).</li>
             <li><a href="https://www.nvfirechf.org/jobs/">NvFirechf.org</a> - Added a firefighting jobs page. These jobs brought in a large number of aspiring firefighters. By offering the opportunity for training and experience as a volunteer, we increased volunteer applications.</li>
-            <li><a href="https://volunteer.firedepartment.net/volunteer-firefighter-application/?departmentname=Axtell%20Fire%20and%20Rescue&fdurl=/directory/nebraska/kearney-county/axtell/axtell-fire-and-rescue&volunteerRecruiterEmail=jeff.england@fmb-axtell.com&volunteerRecruiterName=Jeff%20England&fdid=400">FireDepartment.net</a> - Added free online volunteer firefighter application for fire dept managers. Each application submitted includes a reminder to update and improve their content/photos in order to get more traffic/applicants. Undelivered applications emails provide a signal enabling us to follow up with the fire dept on out-of-date volunteer recruiter info.</li>
+            <li><a href="https://www.firedepartment.net">FireDepartment.net</a> - Added free online volunteer firefighter application for fire dept managers. Each application submitted includes a reminder to update and improve their content/photos in order to get more traffic/applicants. Undelivered applications emails provide a signal enabling us to follow up with the fire dept on out-of-date volunteer recruiter info.</li>
           </ul>
 
         </div>
@@ -199,8 +193,5 @@
       </div>
     </div>
   </body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PC8CGHG"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
   </html>
