Removed US forest service Updated job descriptions

--- a/index.html
+++ b/index.html
@@ -117,16 +117,12 @@
         <a href="https://www.firedepartment.net/">FireDepartment.net</a> <br />
         Aug 2009 - Current <br />
         <ul>
-          <li>Created a directory listing all fire departments/fire stations in the US.
-            <ul>
-              <li>Develpped a custom database driven Content Managment System (CMS) originally using ASP and then converted to PHP & Laravel.</li>
-            </ul>
-          </li>
+          <li>Created a directory listing all fire departments/fire stations in the US.</li>
           <li>Enable & encourage fire dept admins to manage their fire dept, make edits, add fire apparatus/firefighters/photos & volunteer recruitment info.</li>
           <li>Monitor visitor traffic to learn what works best & find opportunities for improvement.</li>
           <li>Periodically, design new features or performance to improve the user experience or increase organic traffic.</li>
-          <li>Recruit/retain programmers, content creators, & an administrator to manage the day-to-day operations of the website. Meg, my first employee (hired in 2013), still works for me as an independent contractor.</li>
-          <li>Manage paid search engines & social media ad campaigns. This site's AdWords campaign has a lifetime cost of over $19,500 with a 5 cent average CPC.</li>
+          <li>Recruit/retain programmers, content creators, & an administrator to manage the day-to-day operations of the website. Meg, my first employee (hired in 2013), still works for me as an independent contractor and manages day to day operations.</li>
+          <li>Manage paid search & social media ad campaigns. This site's AdWords campaign has a lifetime average CPC of 5 cents having spent ~$20,000.</li>
           <li>Proud of the 12+ years helping fire departments get online, recruit volunteers & better protect their communities.</li>
         </ul>
       </div>
@@ -148,24 +144,11 @@
         <a href="https://www.build.com/">Build.com</a> <br />
         Aug 2010 - Aug 2011 <br />
         <ul>
-          <li>Provided dedicated SEO training and support for Build.com (company namesake) & FaucetsDirect.com (a high margin site).</li>
-          <li>Provided technical SEO oversight of all Build.com eCommerce websites and worked directly with the programming team to maintain site health.</li>
+          <li>Provided dedicated SEO training and support for Build.com & FaucetsDirect.com product teams.</li>
+          <li>Provided technical SEO oversight of all Build.com eCommerce websites and worked directly with the programming team to address issues.</li>
           <li>Created a company-wide newsletter helping content creators understand SEO basics and how minor changes provide a positive impact on SEO.</li>
           <li>Presented digital marketing strategies to VP's and key department heads.</li>
-          <li>Led a monthly meeting attended by the VP of technology and top programmers to promote coding practices impacting SEO.</li>
-        </ul>
-
-      </div>
-      <div class="section">
-        <div class="position-title">Fire Engine Operator</div>
-        <a href="https://www.fs.usda.gov/managing-land/fire">US Forest Service</a> <br />
-        7-2001 - 6-2008 <br />
-        <ul>
-          <li>Perform daily inspecting and maintaining the fire engine to be ready to respond to fires, vehicle accidents, and medical calls.</li>
-          <li>Primary driver and pump operator ensuring firefighters had a reliable supply of water at all times.</li>
-          <li>Trained the crew on their role on the fire engine, regularly practiced responding to fires/deploying hose, and helped each firefighter understand the basics of operating the fire engine.</li>
-          <li>Respond to wildfires, structure fires, vehicle accidents, and calls for medical assistance from small-town fire stations. Also traveled to many western states to assist with large wildfire suppression.</li>
-          <li>Exercised daily to maintain a high level of physical fitness required for the demands of the job.</li>
+          <li>Led a monthly programmer meeting attended by the VP of technology and top programmers to promote coding practices impacting SEO.</li>
         </ul>
 
       </div>
