Updated ITI details

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                   <li>
                      Advised student teams during problem-solving assignments:
                      <ul>
-                        <li>Helped each team set their own goals and expectations that engaged the entire team.</li>
-                        <li>Helped students find solutions to errors and find resources to answer their own questions.</li>
+                        <li>Helped each team set up and follow their own goals/expectations that engaged the entire team.</li>
+                        <li>Helped students find solutions to errors and find resources to answer questions.</li>
                         <li>Provide feedback to individuals/teams on how to work more effectively together to achieve team goals.</li>
                      </ul>
                   </li>
