Shrunk SEO Resume

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    <body>
       <header>
          <h1>LARS ESTREM</h1>
-         <h2>DIGITAL MARKETING SPECIALIST</h2>
+         <h2>SEO SPECIALIST</h2>
       </header>
       <div class="row">
          <!-- Column Left -->
@@ -105,21 +105,20 @@
          <div class="col-2">
             <div class="section">
                <div class="section-title">CAREER OBJECTIVE</div>
-               An experienced search marketer, data analyst, and SEO evangelist, seeking opportunities to explain/coordinate/implement digital marketing best practices across multiple departments in a forward thinking organization.
+               An experienced search marketer, data analyst, and SEO evangelist, seeking an opportunities to be part of a across cross-functional team at a community focused organization.
             </div>
             <div class="section">
                <div class="section-title" style="padding-bottom:15px">WORK EXPERIENCE</div>
-               <div class="position-title">Founder & CEO </div>
+               <div class="position-title">Founder & Digital Marketing Lead</div>
                <a href="https://www.firedepartment.net/">FireDepartment.net</a> <br />
                Aug 2009 - Current <br />
                <ul>
                   <li>Created a directory listing all fire departments/fire stations in the US.</li>
                   <li>Enable & encourage fire dept admins to manage their fire dept, make edits, add fire apparatus/firefighters/photos & volunteer recruitment info.</li>
                   <li>Monitor visitor traffic to learn what works best & find opportunities for improvement.</li>
-                  <li>Periodically design new features or improved performance for better user experience or increase organic traffic.</li>
-                  <li>Recruit/retain programmers, content creators, & an administrator to manage the day-to-day operations of the website. Meg, my first employee (hired in 2013), still works for me as an independent contractor and manages day to day operations.</li>
-                  <li>Manage paid search & social media ad campaigns. FireDepartment.net's AdWords campaign has a lifetime average CPC of 5 cents with a spend of ~$20,000.</li>
-                  <li>Proud of the 12+ years helping fire departments get online, recruit volunteers & better protect their communities.</li>
+                  <li>Design new features or performance improvements for better user experience and increase organic traffic.</li>
+                  <li>Recruit/retain programmers, content creators, & an administrator to manage the day-to-day operations of the website.</li>
+                  <li>Utlized cloudflare as a CDN to speed up website and manage security,</li>
                </ul>
             </div>
             <div class="section">
@@ -127,11 +126,11 @@
                <a href="https://www.nvfirechf.org/">Nevada Fire Chiefs Association</a>  <br />
                Oct. 2016 - Current <br />
                <ul>
-                  <li>Increased organic traffic by optimizing the website to have faster load times, creating new content, & improved keyword targeting.</li>
-                  <li>Created a state-wide volunteer firefighter application and an individual volunteer firefighter application for each Nevada fire department.</li>
-                  <li>Added a page listing Nevada firefighting jobs to generate local traffic from job seekers. I then outlined the career development benefits of free training and firefighting experience earned as a volunteer.</li>
-                  <li>Streamlined business processes with automated forms to reduce the demands on volunteer staff.</li>
-                  <li>Acquired a Google Grant (free AdWords account for nonprofits) and targeted ads to focus on bringing in job seekers and those interested in becoming volunteer firefighters.</li>
+                  <li>Increased website traffic from 40 visitors a month to over 1,500 a month.</li>
+                  <li>Increaseed volunteer firefighter recruitment frmo 100/year to >100/month.</li>
+                  <li>Created new programs to generate traffic</li>
+                  <li>Streamlined business processes with automated forms to reduce the demands on staff.</li>
+                  <li>Acquired/managed a Google Grant (free AdWords account for nonprofits) and to bringing in targeted traffic.</li>
                </ul>
             </div>
             <div class="section">
@@ -140,10 +139,10 @@
                Aug 2010 - Aug 2011 <br />
                <ul>
                   <li>Provided dedicated SEO training and support for Build.com & FaucetsDirect.com product teams.</li>
-                  <li>Provided technical SEO oversight of all Build.com eCommerce websites and worked directly with the programming team to address issues.</li>
-                  <li>Created a company-wide newsletter helping content creators understand SEO basics and how minor changes provide a positive impact on SEO.</li>
+                  <li>Provided technical SEO oversight of all Build.com eCommerce websites.</li>
+                  <li>Created a company-wide newsletter helping create a wider understanding of SEO.</li>
                   <li>Presented digital marketing strategies to VP's and key department heads.</li>
-                  <li>Led a monthly programmer meeting attended by the VP of technology and top programmers to promote coding practices impacting SEO.</li>
+                  <li>Led a monthly SEO programmer meeting attended by the VP of technology and top programmers.</li>
                </ul>
             </div>
             <div class="section">
