Update ITI experience

--- a/index.html
+++ b/index.html
@@ -165,17 +165,16 @@
                   <li>
                      Provided classroom instruction on:
                      <ul>
-                        <li>Introduction to computer programming (using Visual Basic).</li>
-                        <li>Object Oriented programming & implemented ASP pages (using Visual Basic).</li>
-                        <li>Structured Systems Analysis</li>
+                        <li>Introduction to computer Object Oriented programming.</li>
+                        <li>Itroduction to Structured Systems Analysis</li>
                      </ul>
                   </li>
                   <li>
                      Advised student teams during problem-solving assignments:
                      <ul>
-                        <li>Helped each team set up and follow their own goals/expectations that engaged the entire team.</li>
-                        <li>Helped students find solutions to errors and find resources to answer questions.</li>
-                        <li>Provide feedback to individuals/teams on how to work more effectively together to achieve team goals.</li>
+                        <li>Helped teams set up and follow team goals/expectations.</li>
+                        <li>Helped students find solutions to errors and answer questions.</li>
+                        <li>Provide feedback to individuals & teams on working more effectively together.</li>
                      </ul>
                   </li>
                </ul>
