update spelling errors

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
          <div class="col-2">
             <div class="section">
                <div class="section-title">CAREER OBJECTIVE</div>
-               An experienced search marketer, data analyst, and SEO evangelist, seeking an opportunities to be part of a across cross-functional team at a community focused organization.
+               An experienced search marketer, data analyst, and SEO evangelist, seeking an opportunity to be part of a cross-functional team at a community focused organization.
             </div>
             <div class="section">
                <div class="section-title" style="padding-bottom:15px">WORK EXPERIENCE</div>
@@ -116,9 +116,9 @@
                   <li>Created a directory listing all fire departments/fire stations in the US.</li>
                   <li>Enable & encourage fire dept admins to manage their fire dept, make edits, add fire apparatus/firefighters/photos & volunteer recruitment info.</li>
                   <li>Monitor visitor traffic to learn what works best & find opportunities for improvement.</li>
-                  <li>Design new features or performance improvements for better user experience and increase organic traffic.</li>
-                  <li>Recruit/retain programmers, content creators, & an administrator to manage the day-to-day operations of the website.</li>
-                  <li>Utlized cloudflare as a CDN to speed up website and manage security,</li>
+                  <li>Design new features or performance improvements for better user experience.</li>
+                  <li>Recruit/retain programmers, content creators, and an admin to manage the day-to-day operations.</li>
+                  <li>Utilize cloudflare as a CDN to speed up website and manage security,</li>
                </ul>
             </div>
             <div class="section">
@@ -127,10 +127,10 @@
                Oct. 2016 - Current <br />
                <ul>
                   <li>Increased website traffic from 40 visitors a month to over 1,500 a month.</li>
-                  <li>Increaseed volunteer firefighter recruitment frmo 100/year to >100/month.</li>
+                  <li>Increased volunteer firefighter recruitment from 100/year to >100/month.</li>
                   <li>Created new programs to generate traffic</li>
                   <li>Streamlined business processes with automated forms to reduce the demands on staff.</li>
-                  <li>Acquired/managed a Google Grant (free AdWords account for nonprofits) and to bringing in targeted traffic.</li>
+                  <li>Acquired/managed a Google Grant (AdWords for nonprofits) to bringing in targeted traffic.</li>
                </ul>
             </div>
             <div class="section">
@@ -150,11 +150,11 @@
                <a href="https://www.fs.usda.gov/managing-land/fire">US Forest Service</a> <br />
                7-2001 - 6-2008 <br />
                <ul>
-                  <li>Perform daily inspecting and maintaining the fire engine to be ready to respond to fires, vehicle accidents, and medical calls.</li>
-                  <li>Primary driver and pump operator ensuring firefighters had a reliable supply of water at all times.</li>
-                  <li>Trained the crew on their role on the fire engine, regularly practiced responding to fires/deploying hose, and helped each firefighter understand the basics of operating the fire engine.</li>
-                  <li>Respond to wildfires, structure fires, vehicle accidents, and calls for medical assistance from small-town fire stations. Also traveled to many western states to assist with large wildfire suppression.</li>
-                  <li>Exercised daily to maintain a high level of physical fitness required for the demands of the job.</li>
+                  <li>Perform daily inspecting and maintaining the fire engine.</li>
+                  <li>Primary driver and pump operator ensuring firefighters had a reliable supply of water.</li>
+                  <li>Trained the crew on their role on the fire engine, regularly practiced responding to fires.</li>
+                  <li>Respond to wildfires, structure fires, vehicle accidents, and calls for medical assistance in remote communities.</li>
+                  <li>Maintain a high level of physical fitness required for the demands of the job.</li>
                </ul>
             </div>
             <div class="section">
@@ -166,7 +166,7 @@
                      Provided classroom instruction on:
                      <ul>
                         <li>Introduction to computer Object Oriented programming.</li>
-                        <li>Itroduction to Structured Systems Analysis</li>
+                        <li>Introduction to Structured Systems Analysis</li>
                      </ul>
                   </li>
                   <li>
