--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                <a href="https://www.firedepartment.net/">FireDepartment.net</a> <br />
                Aug 2009 - Current <br />
                <ul>
-                  <li>Created a directory listing all fire departments/fire stations in the US.</li>
-                  <li>Enable & encourage fire dept admins to manage their fire dept, make edits, add fire apparatus/firefighters/photos & volunteer recruitment info.</li>
+                  <li>Created a directory listing all fire departments and fire stations in the US.</li>
+                  <li>Enable & encourage fire departments to update their contact info, add photos, add fire apparatus/firefighters/photos & volunteer recruitment info.</li>
                   <li>Monitor visitor traffic to learn what works best & find opportunities for improvement.</li>
                   <li>Design new features or performance improvements for better user experience.</li>
                   <li>Recruit/retain programmers, content creators, and an admin to manage the day-to-day operations.</li>
