--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <meta name="keywords" content="SEO, Technical SEO, SEO Strategy, Digital Marketing, Pay Per Click Marketing, PPC">
       <meta name="language" content="english">
       <style>
-         body{max-width:1200px;min-width:1000px;margin:auto;height:100%;background:#1e1e1c;font-size:18px;line-height:24px}
+         body{max-width:1200px;min-width:1000px;margin:auto;height:100%;background:#1e1e1c;font-size:18px;line-height:24px;height:100%}
          header{text-align:center;background-color: blue;color:white}
          h1{font-size:48px;margin:0;padding:50px 0 20px 0;border:0;font-weight:300;}
          h2{font-size:26px;margin:0;padding:10px 0 30px 0;border:0;font-weight:300;}
