Updated resume left column & FDN desc

--- a/index.html
+++ b/index.html
@@ -68,14 +68,7 @@
                   Chico, CA <br />
                </div>
             </div>
-            <div class="section">
-               <div class="details">
-                  Associate of Science <br />
-                  Business Administration <br />
-                  <a href="http://www.butte.edu/">Butte Community College</a> <br />
-                  Oroville, CA <br />
-               </div>
-            </div>
+            
             <div class="section">
                <div class="section-title">SKILLS</div>
                <div class="skill-group">Tracking & Evaluation</div>
@@ -96,10 +89,29 @@
                   HTML <br />
                   CSS <br />
                   PHP <br />
+                  ASP.Net <br />
+                  Jekyll <br />
+                  Hugo <br />
                   SQL <br />
-                  Visual Basic <br />
                </div>
             </div>
+            <div class="section">
+               <div class="skill-group">Optimizations</div>
+               <div class="details">
+                  <a href="https://cloudflare.com/">Cloudflare</a><br />
+                  <a href="https://schema.org/">Structured Data</a><br />
+               </div>
+            </div>
+            <div class="section">
+               <div class="skill-group">Paid Marketing</div>
+               <div class="details">
+                  <a href="https://cloudflare.com/">Facebook Ads</a><br />
+                  <a href="https://ads.google.com">Google Ads</a><br />
+                  <a href="https://www.google.com/grants/">Google Grants</a><br />
+               </div>
+            </div>
+
+
          </div>
          <!-- Column Right -->
          <div class="col-2">
@@ -118,7 +130,8 @@
                   <li>Monitor visitor traffic to learn what works best & find opportunities for improvement.</li>
                   <li>Design new features or performance improvements for better user experience.</li>
                   <li>Recruit/retain programmers, content creators, and an admin to manage the day-to-day operations.</li>
-                  <li>Utilize cloudflare as a CDN to speed up website and manage security,</li>
+                  <li>Used by over 8,000 fire administrators/personnel to update fire department information.</li>
+                  <li>Averaged 6 millionn pageveiws a year for last 5 years.</li>
                </ul>
             </div>
             <div class="section">
@@ -157,7 +170,7 @@
                   <li>Maintain a high level of physical fitness required for the demands of the job.</li>
                </ul>
             </div>
-            <div class="section">
+            <div class="section" style="height:865px"> <!-- height needed to print full screen with two colums -->
                <div class="position-title">Visual Basic & Systems Analysis Instructor</div>
                Information Technology Institute (a post graduate tech school) <br />
                2-2000 - 5-2001 <br />
@@ -180,6 +193,6 @@
                </ul>
             </div>
          </div>
-      </div>
+      </div>     
    </body>
 </html>
