fix spelling on million, ended time with NFCA as of 12-21

--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
                   <li>Design new features or performance improvements for better user experience.</li>
                   <li>Recruit/retain programmers, content creators, and an admin to manage the day-to-day operations.</li>
                   <li>Used by over 8,000 fire administrators/personnel to update fire department information.</li>
-                  <li>Averaged 6 millionn pageveiws a year for last 5 years.</li>
+                  <li>Averaged 6 million pageveiws a year for last 5 years.</li>
                </ul>
             </div>
             <div class="section">
                <div class="position-title">Director of Marketing</div>
                <a href="https://www.nvfirechf.org/">Nevada Fire Chiefs Association</a>  <br />
-               Oct. 2016 - Current <br />
+               Oct. 2016 - Dec. 2021 <br />
                <ul>
                   <li>Increased website traffic from 40 visitors a month to over 1,500 a month.</li>
                   <li>Increased volunteer firefighter recruitment from 100/year to >100/month.</li>
