--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@
                </div>
             </div>
 
-
          </div>
          <!-- Column Right -->
          <div class="col-2">
@@ -127,13 +126,13 @@
                <a href="https://www.firedepartment.net/">Diatribe Foundation</a> <br>
                Jan 2022 to Present<br>
                <ul>
-                  <li>Reversed a decreasing trend on organic traffic on diatribe.org that is now up by 20%</li>
+                  <li>Reversed a declining trend on organic traffic that is now up by 20% from my start date.</li>
                   <li>Regularly meets with the editorial director and CEO to build digital marketing strategies and goals.</li>
                   <li>Primary contact for the website development firm.</li>
                   <li>Primary source of new ideas and designs for SEO and UI improvements to the website.</li>
                   <li>Acquired a MSN Ads grant and optimized it to under $0.10 avg. CPC</li>
                   <li>Reduced the Google Ads grant CPC by >75%</li>
-                  <li>Reduced pagespeed from 17 seconds to 4 seconds on mobile devices</li>
+                  <li>Technical SEO: Reduced pagespeed from 17 seconds to 4 seconds on mobile devices. </li>
                </ul>
             </div>
             <div class="section">
