--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
                   <li>Design new features or performance improvements for better user experience.</li>
                   <li>Recruit/retain programmers, content creators, and an admin to manage the day-to-day operations.</li>
                   <li>Used by over 8,000 fire administrators/personnel to update fire department information.</li>
-                  <li>Averaged 6 million pageveiws a year for last 5 years.</li>
+                  <li>Averaged 6 million pageveiws a year for last 5 years (over 85% organic).</li>
+                  <li>Managed a Google Ads account with an avg. CPC of $0.05</li>
                </ul>
             </div>
             <div class="section">
@@ -158,7 +159,7 @@
                   <li>Increased volunteer firefighter recruitment from 100/year to &gt;100/month.</li>
                   <li>Created new programs to generate traffic</li>
                   <li>Streamlined business processes with automated forms to reduce the demands on staff.</li>
-                  <li>Acquired/managed a Google Grant (AdWords for nonprofits) to bringing in targeted traffic.</li>
+                  <li>Acquired/managed a Google Grant (Google Ads for nonprofits) to bringing in targeted traffic.</li>
                </ul>
             </div>
             <div class="section">
