--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    <body>
       <header>
          <h1>LARS ESTREM</h1>
-         <h2>SEO SPECIALIST</h2>
+         <h2>Digital Marketing Strategist (SEO and PPC)</h2>
       </header>
       <div class="row">
          <!-- Column Left -->
