--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                <div class="details">
                   <a href="https://cloudflare.com/">Facebook Ads</a><br>
                   <a href="https://ads.google.com/">Google Ads</a><br>
+                  <a href="https://ads.microsoft.com/">MSN Ads</a><br>
                   <a href="https://www.google.com/grants/">Google Grants</a><br>
                </div>
             </div>
