--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
          <div class="col-2">
             <div class="section">
                <div class="section-title">CAREER OBJECTIVE</div>
-               An experienced search marketer, data analyst, and SEO evangelist, seeking an opportunity to be part of a cross-functional team at a community focused organization.
+               Experienced search marketer, data analyst, and SEO evangelist, seeking a position on a cross-functional team at a community focused organization.
             </div>
             <div class="section">
                <div class="section-title" style="padding-bottom:15px">WORK EXPERIENCE</div>
