--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                   <li>Primary contact for the website development firm.</li>
                   <li>Primary source of new ideas and designs for SEO and UI improvements to the website.</li>
                   <li>Acquired a MSN Ads grant and optimized it to under $0.10 avg. CPC</li>
-                  <li>Reduced the Google Ads grant CPC by >75%</li>
-                  <li>Technical SEO: Reduced pagespeed from 17 seconds to 4 seconds on mobile devices. </li>
+                  <li>Reduced the Google Ads grant CPC by >75%.</li>
+                  <li>Technical SEO: Reduced mobile pagespeed from 17 seconds to 4 seconds. </li>
                </ul>
             </div>
             <div class="section">
