--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
    <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       
-      <title>Lars Estrem - SEO and Paid Search Strategist</title>
+      <title>Lars Estrem Resume - SEO and Paid Search Strategist</title>
       <link rel="icon" type="image/svg+xml" href="https://resume-7id.pages.dev/favicon.svg">
       <link rel="canonical" href="https://resume-7id.pages.dev/">
       <meta name="viewport" content="width=device-width,minimum-scale=1">
-      <meta name="description" content="Lars Estrem: Education, Skills, and Work Experience.">
+      <meta name="description" content="Lars Estrem Resume: Education, Skills, and Work Experience.">
       <meta name="keywords" content="SEO, Technical SEO, SEO Strategy, Digital Marketing, Pay Per Click Marketing, PPC">
       <meta name="language" content="english">
       <style>
@@ -133,7 +133,7 @@
                   <li>Primary source of new ideas and designs for SEO and UI improvements to the website.</li>
                   <li>Acquired a MSN Ads grant and optimized it to under $0.10 avg. CPC</li>
                   <li>Reduced the Google Ads grant CPC by >75%.</li>
-                  <li>Technical SEO: Reduced mobile pagespeed from 17 seconds to 4 seconds. </li>
+                  <li>Technical SEO: Reduced mobile pagespeed from 17 seconds to 4 seconds.</li>
                </ul>
             </div>
             <div class="section">
