--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="section">
                <div class="section-title" style="padding-bottom:15px">WORK EXPERIENCE</div>
                <div class="position-title">SEO Manager</div>
-               <a href="https://www.firedepartment.net/">Diatribe Foundation</a> <br>
+               <a href="https://www.firedepartment.net/">diaTribe Foundation</a> <br>
                Jan 2022 to Present<br>
                <ul>
                   <li>Reversed a declining trend on organic traffic that is now up by 20% from my start date.</li>
