--- a/index.html
+++ b/index.html
@@ -73,15 +73,17 @@
                <div class="skill-group">Tracking &amp; Evaluation</div>
                <div class="details">
                   <a href="https://www.semrush.com/">SEMRUSH</a><br>
+                  <a href="https://www.conductor.com/">Conductor Searchlight</a> <br>
                   <a href="https://www.screamingfrog.co.uk/seo-spider/">Screaming Frog</a> <br>
-                  <a href="https://www.basecamp.com/">Basecamp</a> <br>
                   <a href="https://datastudio.google.com/">Google Data Studios</a><br>
                   <a href="https://analytics.withgoogle.com/">Google Analytics</a> <br>
-                  <a href="https://developers.google.com/speed/pagespeed/insights/">Pagespeed Insights</a> <br>
                   <a href="https://search.google.com/search-console/about">Google Search Console</a> <br>
                   <a href="https://www.bing.com/webmasters/about">Bing Webmaster Tools</a> <br>
-                  <a href="https://www.conductor.com/">Conductor Searchlight</a> <br>
+                  <a href="https://developers.google.com/speed/pagespeed/insights/">Pagespeed Insights</a> <br>
                   <a href="https://www.microsoft.com/en-us/microsoft-365/excel">Microsoft Excel</a>
+                  <a href="https://workspace.google.com/">Google Workplace</a><br>
+                  <a href="https://www.basecamp.com/">Basecamp</a> <br>
+                  <a href="https://asana.com/">Asana</a> <br>
                   
                </div>
             </div>
