--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <a href="https://search.google.com/search-console/about">Google Search Console</a> <br>
                   <a href="https://www.bing.com/webmasters/about">Bing Webmaster Tools</a> <br>
                   <a href="https://developers.google.com/speed/pagespeed/insights/">Pagespeed Insights</a> <br>
-                  <a href="https://www.microsoft.com/en-us/microsoft-365/excel">Microsoft Excel</a>
+                  <a href="https://www.microsoft.com/en-us/microsoft-365/excel">Microsoft Excel</a><br>
                   <a href="https://workspace.google.com/">Google Workplace</a><br>
                   <a href="https://www.basecamp.com/">Basecamp</a> <br>
                   <a href="https://asana.com/">Asana</a> <br>
